--- a/nav.css
+++ b/nav.css
@@ -1,11 +1,8 @@
-
-
-
 html, body, #main {
     font-size: 16px;
     width: 100%;
     height: 100%;
-    background:-webkit-linear-gradient(-45deg,  #a9e4f7 0%,#0fb4e7 100%);
+    background:-webkit-linear-gradient(-45deg,  #d1d9dc 0%,#d7dddf 100%);
   }
   #main{
    
