--- a/CSS/keyboards.css
+++ b/CSS/keyboards.css
@@ -187,14 +187,16 @@ body {
 }
 
 .card {
-    margin-top: 2rem;
-    margin-left: 2rem;
+    margin: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
     text-align: center;
     font-family: arial;
     float: left;
-    
+    display: block;
+    /* box-sizing: content-box; */
+    width: 14rem;
+    height: 18rem;
   }
   
   .price {
