--- a/CSS/Success.css
+++ b/CSS/Success.css
@@ -186,76 +186,81 @@ body {
     }
 }
 
+.row {
+    padding-bottom: 2rem;
+}
+
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
+}
+
+.column {
+    /* float: left; */
+    margin: auto;
+    width: 20%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin: 8px;
+}
+
 .about-section {
     margin-top: 2rem;
     padding: 50px;
     text-align: center;
     background-color: #474e5d;
     color: white;
+    height: 100%;
 }
 
-.banking-details-section {
-    margin-bottom: 2rem;
-    padding: 50px;
-    text-align: center;
-    background-color: #474e5d;
-    color: white;
+.about-section h1{
+    margin-top: 14rem;
 }
 
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-  }
-  
-  label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-  }
-  
-  input[type=submit] {
-    background-color: #04AA6D;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    float: right;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
-  .formClass {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-  }
-  
-  .col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
-  }
-  
-  .col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
+
+.container {
+    padding: 0 16px;
+}
+
+.container::after,
+.row::after {
+    /* content: ""; */
     clear: both;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-      width: 100%;
-      margin-top: 0;
+    display: table;
+}
+
+.title {
+    color: grey;
+}
+
+.button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+}
+
+.button:hover {
+    background-color: #555;
+}
+
+@media screen and (max-width: 800px) {
+    .column {
+        width: 100%;
+        display: block;
     }
-  }
+}
