--- a/CSS/index.css
+++ b/CSS/index.css
@@ -186,3 +186,34 @@ body {
     }
 }
 
+.about-section {
+    margin-top: 2rem;
+    padding: 50px;
+    text-align: center;
+    background-color: #474e5d;
+    color: white;
+}
+.we-offer-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #4371d3;
+    color: white;
+}
+.feel-free-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #e65050;
+    color: white;
+}
+.feel-free-section a{
+    text-decoration: none;
+}
+.order-section {
+    padding: 50px;
+    text-align: center;
+    background-color: #51eb59;
+    color: white;
+}
+.order-section a{
+    text-decoration: none;
+}
