--- a/CSS/keycaps.css
+++ b/CSS/keycaps.css
@@ -34,7 +34,7 @@ body {
     right: 0;
     top: 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-    z-index: 20;
+    z-index:1;
 }
 
 .navbar-container {
@@ -187,40 +187,15 @@ body {
     }
 }
 
-.about-section {
+/* .card {
     margin-top: 2rem;
-    padding: 50px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     text-align: center;
-    background-color: #474e5d;
-    color: white;
-}
-.we-offer-section {
-    padding: 50px;
-    text-align: center;
-    background-color: #4371d3;
-    color: white;
-}
-.feel-free-section {
-    padding: 50px;
-    text-align: center;
-    background-color: #e65050;
-    color: white;
-}
-.feel-free-section a{
-    text-decoration: none;
-}
-.order-section {
-    padding: 50px;
-    text-align: center;
-    background-color: #51eb59;
-    color: white;
-}
-.order-section a{
-    text-decoration: none;
-}
+    font-family: arial;
+    display: block;
+  }*/
 
-
-.products{
+  .products{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 1rem;
